@@ -1,5 +1,10 @@
 2008-10-24  Badlop  <badlop@process-one.net>
 
+	* src/ejabberd_c2s.erl: Ensure unique ID in roster push (EJAB-721)
+	* src/mod_roster.erl: Likewise
+	* src/mod_roster_odbc.erl: Likewise
+	* src/mod_shared_roster.erl: Likewise
+
 	* src/ejabberd_lstener.erl: Fix listeners
 	* src/ejabberd_sup.erl: Likewise
 	* src/gen_mod.erl: Likewise
